--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,11 @@
+ <style>
+      @media screen and (min-width: 480px) {
+        .para-one, .para-two {
+            font-size: 15px;
+        }
+        
+      }
+</style>
 <div class="hero-header">
   <div class="main-text">Pair BnB</div>
   <div class="sub-text">A place to find your next home</div>
